--- a/config/theframework.cfg
+++ b/config/theframework.cfg
@@ -1,3 +1,11 @@
+Development {
+	# When enabled, misc tooltips will be displayed on items. Useful for debugging!
+	Boolean:debugTooltips=false
+
+	# This shows overlay for all recently pressed keys
+	Boolean:keyOverlay=false
+
+}
 Misc {
 	# This is whether to allow button presses for changing time, you still need to be opped or on a world with cheats enabled
 	Boolean:enableButtonTimeChanging=true
@@ -7,6 +15,17 @@ Misc {
 
 	# This is the rate at which time changes by when pressing a time button
 	Integer:timeChangeRate=30
+
+}
+Translation {
+	# Setting this to true will attempt to translate chat messages
+	Boolean:translateChat=false
+
+	# Setting this to true will attempt to translate item names which are not localized
+	Boolean:translateItems=false
+
+	# Valid API key used for Yandex translations
+	String:yandexApiKey=
 
 }
 Tweaks {
