further suit tweaks

--- a/config/machinemuse/powersuits.cfg
+++ b/config/machinemuse/powersuits.cfg
@@ -56,10 +56,10 @@ general {
         # Maximum Armor per Piece
         # Min: 0.0
         # Max: 8.0
-        D:getMaximumArmorPerPiece=6.0
+        D:getMaximumArmorPerPiece=8
 
         # Maximum flight speed (in m/s)
-        D:getMaximumFlyingSpeedmps=25.0
+        D:getMaximumFlyingSpeedmps=40
 
         # Chance of each item being returned when salvaged
         # Min: 0.0
