--- a/config/machinemuse/powersuits.cfg
+++ b/config/machinemuse/powersuits.cfg
@@ -59,7 +59,7 @@ general {
         D:getMaximumArmorPerPiece=8
 
         # Maximum flight speed (in m/s)
-        D:getMaximumFlyingSpeedmps=40
+        D:getMaximumFlyingSpeedmps=40.0
 
         # Chance of each item being returned when salvaged
         # Min: 0.0
@@ -363,7 +363,7 @@ general {
             D:sprintAssist.sprintExComp.base=0.0
             D:sprintAssist.sprintExComp.compensation.multiplier=1.0
             D:sprintAssist.sprintSpeedMult.base=0.01
-            D:sprintAssist.sprintSpeedMult.sprintAssist.multiplier=5.0
+            D:sprintAssist.sprintSpeedMult.sprintAssist.multiplier=10.0
             D:sprintAssist.walkingEnergyCon.base=0.0
             D:sprintAssist.walkingEnergyCon.walkingAssist.multiplier=100.0
             D:sprintAssist.walkingSpeedMult.base=0.01
