--- a/config/soulshardsrespawn/soulshardsrespawn.cfg
+++ b/config/soulshardsrespawn/soulshardsrespawn.cfg
@@ -55,6 +55,114 @@ entity_list {
     # Allows the gathering and spawning of pink_slime [default: true]
     B:"industrialforegoing:pink_slime"=true
 
+    # Allows the gathering and spawning of BabySkeleton [default: true]
+    B:"mekanism:babyskeleton"=true
+
+    # Allows the gathering and spawning of Robit [default: true]
+    B:"mekanism:robit"=true
+
+    # Allows the gathering and spawning of memeinabottle:AnakinSkywalker [default: true]
+    B:"memeinabottle:anakin_skywalker"=true
+
+    # Allows the gathering and spawning of memeinabottle:AttachedGirlfriend [default: true]
+    B:"memeinabottle:attached_girlfriend"=true
+
+    # Allows the gathering and spawning of memeinabottle:BillCipher [default: true]
+    B:"memeinabottle:bill_cipher"=true
+
+    # Allows the gathering and spawning of memeinabottle:BongoCat [default: true]
+    B:"memeinabottle:bongo_cat"=true
+
+    # Allows the gathering and spawning of memeinabottle:Clippy [default: true]
+    B:"memeinabottle:clippy"=true
+
+    # Allows the gathering and spawning of memeinabottle:DancingHotdog [default: true]
+    B:"memeinabottle:dancing_hotdog"=true
+
+    # Allows the gathering and spawning of memeinabottle:DankeyKang [default: true]
+    B:"memeinabottle:dankey_kang"=true
+
+    # Allows the gathering and spawning of memeinabottle:DatBoi [default: true]
+    B:"memeinabottle:dat_boi"=true
+
+    # Allows the gathering and spawning of memeinabottle:DogeWolf [default: true]
+    B:"memeinabottle:doge_wolf"=true
+
+    # Allows the gathering and spawning of memeinabottle:DonaldTrump [default: true]
+    B:"memeinabottle:donald_trump"=true
+
+    # Allows the gathering and spawning of memeinabottle:EduardKhil [default: true]
+    B:"memeinabottle:eduard_khil"=true
+
+    # Allows the gathering and spawning of memeinabottle:ForeverAlone [default: true]
+    B:"memeinabottle:forever_alone"=true
+
+    # Allows the gathering and spawning of memeinabottle:Gnome [default: true]
+    B:"memeinabottle:gnome"=true
+
+    # Allows the gathering and spawning of memeinabottle:GrandDad [default: true]
+    B:"memeinabottle:grand_dad"=true
+
+    # Allows the gathering and spawning of memeinabottle:GrumpyCat [default: true]
+    B:"memeinabottle:grumpy_cat"=true
+
+    # Allows the gathering and spawning of memeinabottle:HeMan [default: true]
+    B:"memeinabottle:he_man"=true
+
+    # Allows the gathering and spawning of memeinabottle:JohnCena [default: true]
+    B:"memeinabottle:john_cena"=true
+
+    # Allows the gathering and spawning of memeinabottle:Knuckles [default: true]
+    B:"memeinabottle:knuckles"=true
+
+    # Allows the gathering and spawning of memeinabottle:KnucklesQueen [default: true]
+    B:"memeinabottle:knuckles_queen"=true
+
+    # Allows the gathering and spawning of memeinabottle:MemeBigBoi [default: true]
+    B:"memeinabottle:me_me_big_boi"=true
+
+    # Allows the gathering and spawning of memeinabottle:Moonman [default: true]
+    B:"memeinabottle:moonman"=true
+
+    # Allows the gathering and spawning of memeinabottle:NigelThornberry [default: true]
+    B:"memeinabottle:nigel_thornberry"=true
+
+    # Allows the gathering and spawning of memeinabottle:NyanCat [default: true]
+    B:"memeinabottle:nyan_cat"=true
+
+    # Allows the gathering and spawning of memeinabottle:Pepe [default: true]
+    B:"memeinabottle:pepe"=true
+
+    # Allows the gathering and spawning of memeinabottle:PhilSwift [default: true]
+    B:"memeinabottle:phil_swift"=true
+
+    # Allows the gathering and spawning of memeinabottle:Pingu [default: true]
+    B:"memeinabottle:pingu"=true
+
+    # Allows the gathering and spawning of memeinabottle:PPAPGuy [default: true]
+    B:"memeinabottle:ppap_guy"=true
+
+    # Allows the gathering and spawning of memeinabottle:RoadmanShaq [default: true]
+    B:"memeinabottle:roadman_shaq"=true
+
+    # Allows the gathering and spawning of memeinabottle:RoflCopter [default: true]
+    B:"memeinabottle:rofl_copter"=true
+
+    # Allows the gathering and spawning of memeinabottle:RottenRobbie [default: true]
+    B:"memeinabottle:rotten_robbie"=true
+
+    # Allows the gathering and spawning of memeinabottle:Sanic [default: true]
+    B:"memeinabottle:sanic"=true
+
+    # Allows the gathering and spawning of memeinabottle:Sans [default: true]
+    B:"memeinabottle:sans"=true
+
+    # Allows the gathering and spawning of memeinabottle:Shrek [default: true]
+    B:"memeinabottle:shrek"=true
+
+    # Allows the gathering and spawning of memeinabottle:taCnayN [default: true]
+    B:"memeinabottle:tac_nayn"=true
+
     # Allows the gathering and spawning of ArmorStand [default: false]
     B:"minecraft:armor_stand"=false
 
@@ -204,6 +312,12 @@ entity_list {
 
     # Allows the gathering and spawning of ZombieVillager [default: true]
     B:"minecraft:zombie_villager"=true
+
+    # Allows the gathering and spawning of openblocks.luggage [default: true]
+    B:"openblocks:luggage"=true
+
+    # Allows the gathering and spawning of openblocks.mini_me [default: true]
+    B:"openblocks:mini_me"=true
 
     # Allows the gathering and spawning of plethora:fakePlayer [default: true]
     B:"plethora:fakeplayer"=true
