--- a/config/machinemuse/numina.cfg
+++ b/config/machinemuse/numina.cfg
@@ -1,13 +1,25 @@
 # Configuration file
 
 general {
+    D:ae2Ratio=2.0
+    B:fovFixDefaultState=false
+    D:ic2Ratio=4.0
+    B:isDebugging=false
+    I:maxTier1=1000000
+    I:maxTier2=5000000
+    I:maxTier3=50000000
+    I:maxTier4=100000000
+    D:mekRatio=0.4
+    D:rsRatio=1.0
+    B:useFOVFix=false
+    B:useSounds=true
 
     general {
         # Applied Energistics AE energy equals how many RF
         D:ae2Ratio=2.0
 
         # Default state of FOVfix on login (enabled = true, disabled = false)
-        B:fovFixDefaultState=true
+        B:fovFixDefaultState=false
 
         # IndustrialCraft2 EU equals how many RF
         D:ic2Ratio=4.0
@@ -42,7 +54,7 @@ general {
         D:rsRatio=1.0
 
         # Ignore speed boosts for field of view
-        B:useFOVFix=true
+        B:useFOVFix=false
 
         # Use sounds
         B:useSounds=true
