--- a/config/machinemuse/powersuits.cfg
+++ b/config/machinemuse/powersuits.cfg
@@ -20,20 +20,6 @@ general {
         B:toggleModuleSpam=false
     }
 
-    recipesallowed {
-        # Use recipes for EnderIO
-        B:useEnderIORecipes=true
-
-        # Use recipes for IndustrialCraft 2
-        B:useIC2Recipes=true
-
-        # Use recipes for TechReborn
-        B:useTechRebornRecipes=true
-
-        # Use recipes for Thermal Expansion
-        B:useThermalExpansionRecipes=true
-    }
-
     general {
         # Allow Conflicting Keybinds
         B:allowConflictingKeybinds=true
@@ -56,7 +42,7 @@ general {
         # Maximum Armor per Piece
         # Min: 0.0
         # Max: 8.0
-        D:getMaximumArmorPerPiece=8
+        D:getMaximumArmorPerPiece=8.0
 
         # Maximum flight speed (in m/s)
         D:getMaximumFlyingSpeedmps=40.0
@@ -64,7 +50,8 @@ general {
         # Chance of each item being returned when salvaged
         # Min: 0.0
         # Max: 1.0
-        D:getSalvageChance=1.0
+        D:getSalvageChance=0.9
+        D:getWeightCapacity=100000.0
 
         # Use a 24h clock instead of 12h
         B:use24hClock=false
@@ -460,6 +447,20 @@ general {
 
         # Use legacy cosmetic configuration instead of cosmetic presets
         B:useLegacyCosmeticSystem=true
+    }
+
+    recipesallowed {
+        # Use recipes for EnderIO
+        B:useEnderIORecipes=true
+
+        # Use recipes for IndustrialCraft 2
+        B:useIC2Recipes=true
+
+        # Use recipes for TechReborn
+        B:useTechRebornRecipes=true
+
+        # Use recipes for Thermal Expansion
+        B:useThermalExpansionRecipes=true
     }
 
 }
