--- a/config/teamreborn/techreborn/items.cfg
+++ b/config/teamreborn/techreborn/items.cfg
@@ -1,6 +1,7 @@
 # Configuration file
 
 cloacking_device {
+    # Cloacking device energy usesage (Value in FE) [Default=10]
     I:ClockingDeviceEnergyUsage=10
 }
 
@@ -69,8 +70,13 @@ stats {
 
 
 upgrades {
+    # Energy storage upgrade extra power [Default=40000.0]
     D:energy_storage=40000.0
+
+    # Overclocker upgrade power multipiler [Default=0.75]
     D:overclocker_power=0.75
+
+    # Overclocker upgrade speed multipiler [Default=0.25]
     D:overclocker_speed=0.25
 }
 
