--- a/config/teamreborn/retroexchange/config.cfg
+++ b/config/teamreborn/retroexchange/config.cfg
@@ -3,6 +3,8 @@
 config {
     # The chance for a shard to drop from an entity [Default=25]
     I:shard_drop_chance=18
+
+    # The max damage of a shard [Default=1500]
     I:stone_max_damage=1500
 }
 
