--- a/config/teamreborn/techreborn/compat.cfg
+++ b/config/teamreborn/techreborn/compat.cfg
@@ -13,7 +13,10 @@ buildcraft {
 
 
 forestry {
+    # Enable distillation tower recipes envolving Forestry fuels [Default=true]
     B:EnableDistillationTowerForestryRecipes=true
+
+    # Allow Forestry fuels to be used in the fuel generators [Default=true]
     B:EnableForestryFuels=true
 }
 
@@ -50,6 +53,8 @@ modules {
 
     # Should the compat module 'CraftTweakerCompat' be loaded
     B:CraftTweakerCompat=true
+
+    # Should the compat module 'ForestryCompat' be loaded
     B:ForestryCompat=true
     B:IC2Module=true
 
