--- a/config/worldedit/worldedit.properties
+++ b/config/worldedit/worldedit.properties
@@ -1,5 +1,5 @@
 #Don't put comments; they get removed
-#Thu Oct 17 18:09:40 UTC 2019
+#Thu Oct 17 14:49:32 CDT 2019
 super-pickaxe-many-drop-items=true
 super-pickaxe-drop-items=true
 craftscript-dir=craftscripts
