--- a/config/InvTweaks.cfg
+++ b/config/InvTweaks.cfg
@@ -1,6 +1,6 @@
 #Inventory Tweaks Configuration
 #(Regarding shortcuts, all key names can be found at: http://legacy.lwjgl.org/javadoc/org/lwjgl/input/Keyboard.html)
-#Thu Oct 17 15:02:31 CDT 2019
+#Wed Sep 04 10:30:31 PDT 2019
 enableMiddleClick=true
 showChestButtons=true
 enableSortingOnPickup=false
