--- a/config/splash.properties
+++ b/config/splash.properties
@@ -1,5 +1,5 @@
 #Splash screen properties
-#Thu Oct 17 15:00:59 CDT 2019
+#Wed Sep 04 10:28:16 PDT 2019
 logoOffset=0
 barBackground=0x1F1F1F
 memoryGood=0x78CB34
