server boot changes

--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -105,6 +105,7 @@ crafting {
     B:"blusunrize.immersiveengineering.common.IEContent$1"=true
     B:blusunrize.immersiveengineering.common.blocks.BlockIEBase=true
     B:blusunrize.immersiveengineering.common.blocks.metal.BlockMetalDecoration0=true
+    B:brightspark.sparkstools.block.BlockCompressedCobble=true
     B:buildcraft.core.block.BlockDecoration=true
     B:cofh.thermalfoundation.block.BlockOre=true
     B:cofh.thermalfoundation.block.BlockOreFluid=true
@@ -112,15 +113,26 @@ crafting {
     B:cofh.thermalfoundation.block.BlockStorage=true
     B:cofh.thermalfoundation.block.BlockStorageAlloy=true
     B:cofh.thermalfoundation.block.BlockStorageResource=true
+    B:com.mrcrayfish.furniture.blocks.BlockInflatableCastle=true
     B:com.nekokittygames.mffs.common.block.BlockMonazitOre=true
     B:com.nekokittygames.thaumictinkerer.common.blocks.BlockBlackQuartz=true
+    B:com.rwtema.extrautils2.blocks.BlockAngelBlock=true
+    B:com.rwtema.extrautils2.blocks.BlockCompressed=true
+    B:com.rwtema.extrautils2.blocks.BlockDecorativeGlass=true
+    B:com.rwtema.extrautils2.blocks.BlockDecorativeSolid=true
+    B:com.rwtema.extrautils2.blocks.BlockDecorativeSolidWood=true
+    B:com.rwtema.extrautils2.blocks.BlockRedstoneClock=true
+    B:com.rwtema.extrautils2.blocks.BlockSimpleDecorative=true
+    B:"com.rwtema.extrautils2.blocks.XUTree$XUTreePlanks"=true
     B:com.xcompwiz.mystcraft.block.BlockCrystal=true
     B:crazypants.enderio.base.block.darksteel.obsidian.BlockReinforcedObsidian=true
     B:crazypants.enderio.base.block.decoration.BlockDecorationFacing=true
+    B:crazypants.enderio.base.block.infinity.BlockInfinity=true
     B:crazypants.enderio.base.block.insulation.BlockIndustrialInsulation=true
     B:crazypants.enderio.base.material.alloy.BlockAlloy=true
     B:crazypants.enderio.base.material.alloy.endergy.BlockEndergyAlloy=true
     B:de.sanandrew.mods.immersivecables.block.BlockCoil=true
+    B:fluxnetworks.common.block.BlockCore=true
     B:"forestry.apiculture.blocks.BlockHoneyComb$1"=true
     B:"forestry.arboriculture.blocks.BlockArbLog$1"=true
     B:"forestry.arboriculture.blocks.BlockArbPlanks$1"=true
@@ -138,6 +150,10 @@ crafting {
     B:ic2.core.block.steam.BlockRefractoryBricks=true
     B:logisticspipes.blocks.LogisticsSolidBlock=true
     B:me.ichun.mods.ichunutil.common.block.BlockCompactPorkchop=true
+    B:"mekanism.common.block.BlockBasic$1"=true
+    B:mekanism.common.block.BlockOre=true
+    B:mekanism.common.block.BlockPlastic=true
+    B:mekanism.common.block.BlockSalt=true
     B:mod.flatcoloredblocks.block.BlockFlatColored=true
     B:mod.flatcoloredblocks.block.BlockFlatColoredTranslucent=true
     B:mods.railcraft.common.blocks.aesthetics.brick.BlockBrick=true
@@ -197,6 +213,8 @@ crafting {
     B:net.minecraft.block.BlockStainedHardenedClay=true
     B:net.minecraft.block.BlockStone=true
     B:net.minecraft.block.BlockStoneBrick=true
+    B:openblocks.common.block.BlockElevator=true
+    B:openblocks.common.block.BlockSponge=true
     B:org.icannt.netherendingores.common.block.blocks.BlockOreEndModded1=true
     B:org.icannt.netherendingores.common.block.blocks.BlockOreEndModded2=true
     B:org.icannt.netherendingores.common.block.blocks.BlockOreEndVanilla=true
