--- a/config/teamreborn/techreborn/ic2.cfg
+++ b/config/teamreborn/techreborn/ic2.cfg
@@ -2,7 +2,7 @@
 
 config {
     # Should ic2 power support be enabled? (Requires restart) [Default=true]
-    B:ic2Power=false
+    B:ic2Power=true
 
     # When enabled all of TR's compressor recipes are added to the IC2 compressor (Requies deduplication) (Requires restart) [Default=true]
     B:syncCompressorRecipes=true
